# py-mslite

./: .gitignore  CMakeLists.txt  README.md  mslite.py  setup.py
include/schema/: model_generated.h  ops_generated.h
mindspore_serving/: client.py  mindspore_serving.py  model.py  request.json  server.py  vision.py
src/: context.cc  lite_session.cc  model.cc  version.cc
